Main Mechanics Done, Need To Add Continuations and Final

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div id="game">
-        <button id="game-button" type = "button"></button>
+        <button id="game-button" type = "button">Start</button>
+        <div id="title">Welcome To Tedium.</div>
     </div>
 </body>
 </html>
