--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="game">
-        <button id="game-button" type = "button">Start</button>
-        <div id="title">Welcome To Tedium.</div>
+        <button id="game-button" type = "button">Click Me</button>
+        <div id="title"></div>
     </div>
 </body>
 </html>
