Added content through 180 clicks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="game">
-        <button id="game-button" type = "button">Click Me</button>
+        <button id="game-button" type = "button">Click</button>
         <div id="title"></div>
     </div>
 </body>
